# cuda_lenia

./: CMakeLists.txt  README.md  main.cu
